--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -37,6 +37,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Review of Day 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1274,7 +1290,7 @@
     }
    },
    "source": [
-    "## Exercise\n",
+    "## 5-minute exercise\n",
     "\n",
     "Here's a dictionary of students and their grades:\n",
     "```\n",
@@ -2843,6 +2859,29 @@
    },
    "source": [
     "## Introduction to AI assisted programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mini exercise (15 min)\n",
+    "\n",
+    "## 5 min break before the last lecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion remarks"
    ]
   },
   {
