--- a/exercises/day1/Day_1_Exercise_1.ipynb
+++ b/exercises/day1/Day_1_Exercise_1.ipynb
@@ -6,16 +6,27 @@
    "source": [
     "# Day 1, Exercise 1 - Understanding Data Types and Variables\n",
     "\n",
-    "- Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
+    "- ### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
-    "- There are three parts to this exercise: Numbers, Strings, and Lists, with the answers written under each section."
+    "- ### There are three parts to this exercise, with the answers written under each section: \n",
+    "    - #### 1. Numbers\n",
+    "    - #### 2. Strings\n",
+    "    - #### 3. Lists\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Numbers\n",
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Numbers\n",
     "\n",
     "`2 + 2`\n",
     "\n",
@@ -50,14 +61,14 @@
     "Assign `area + 2` to `return`\n",
     "\n",
     "\n",
-    "<br><br>"
+    "<div style=\"height: 50px\"></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numbers - Answers"
+    "### The answer"
    ]
   },
   {
@@ -348,7 +359,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Strings\n",
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Strings\n",
     "\n",
     "\n",
     "`'Hello World!'`  \n",
@@ -391,14 +409,14 @@
     "&emsp;&emsp;&emsp;&emsp; `'concatenation')`  \n",
     "`text`\n",
     "\n",
-    "<br><br>"
+    "<div style=\"height: 50px\"></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strings - Answers"
+    "### The answer"
    ]
   },
   {
@@ -465,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above we have to escape the special character ' to prevent python as interpreting it as end of the string. Another way of inserting ' into a string would be to enclose the string in \" instead, as in the example below. That way the ' is interpreted as a normal character."
+    "In the example above we have to escape the special character `'` to prevent Python from interpreting it as the end of the string. Another way of inserting `'` into a string is to enclose the string in `\"` instead, as in the example below. This way, the `'` is interpreted as a normal character."
    ]
   },
   {
@@ -666,12 +684,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you don’t want characters prefaced by \\ to be interpreted as special characters, you can use raw strings by adding an r before the first quote as above"
+    "If you don’t want characters prefaced by `\\` to be interpreted as special characters, you can use __raw strings__ by adding an `r` before the first quote as above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +698,7 @@
        "'hmm miammiammiam'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,30 +776,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><br><br>"
+    "<hr style=\"border: 2px solid #000080;\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lists\n",
+    "## 3. Lists\n",
     "\n",
-    "`squares = [1, 4, 9, 16, 25]`  \n",
-    "`cubes   = [1, 8, 27, 64, 125]`\n",
+    "```python\n",
+    "squares = [1, 4, 9, 16, 25] \n",
+    "cubes   = [1, 8, 27, 64, 125]\n",
     "\n",
-    "`squares + cubes`  \n",
-    "`squares * 2`  \n",
-    "`squares * cubes`  \n",
-    "\n",
-    "<br><br>"
+    "squares + cubes \n",
+    "squares * 2\n",
+    "squares * cubes\n",
+    "```\n",
+    "<div style=\"height: 50px\"></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lists - Answers\n",
+    "### The answers\n",
     "\n",
     "Lists are a collection of items grouped together. A list is denoted using comma-separated values between square brackets. A list might contain items of different types, but usually the items all have the same type."
    ]
@@ -832,7 +851,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -849,6 +870,99 @@
    "source": [
     "squares * cubes     # Multiplication of lists can only be done with integers, not lists"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Set\n",
+    "\n",
+    "```python\n",
+    "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"]\n",
+    "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"}\n",
+    "unique_list = list(set(mylist))\n",
+    "\n",
+    "set1 = {1, 2, 3}\n",
+    "set2 = {3, 4, 5}\n",
+    "union_set = set1.union(set2)\n",
+    "print(union_set)  # Output: {1, 2, 3, 4, 5}\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "<div style=\"height: 50px\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"]\n",
+    "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"}\n",
+    "\n",
+    "\n",
+    "\n",
+    "unique_list = list(set(mylist))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"border: 2px solid #000080;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The answers\n",
+    "\n",
+    "A set is an unordered collection of unique elements. It is defined using curly braces `{}` or the `set()` constructor, and they support various operations like union, intersection, and difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['4', '10', '2', '13', '11', '1']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
