--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -43,12 +43,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "R"
+    "### Review of Quiz of Day 4"
    ]
   },
   {
