--- a/exercises/day1/Day_1_Exercise_1.ipynb
+++ b/exercises/day1/Day_1_Exercise_1.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "- ### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
-    "- ### There are three parts to this exercise, with the answers written under each section: \n",
+    "- ### There are four parts to this exercise, with the answers written under each section: \n",
     "    - #### 1. Numbers\n",
     "    - #### 2. Strings\n",
     "    - #### 3. Lists\n",
-    "    "
+    "    - #### 4. Sets"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "2.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "270"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "25"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "5.140000000000001"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "100.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "100.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "150.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-4bdf2ca84b6b>, line 1)",
+     "evalue": "invalid decimal literal (1232134827.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-4bdf2ca84b6b>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    2timesArea = area * 2\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[47], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    2timesArea = area * 2\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
      ]
     }
    ],
@@ -330,18 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-da7854f8d5e4>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-da7854f8d5e4>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    return = area + 2\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "return = area + 2"
    ]
@@ -421,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +421,7 @@
        "'Hello World!'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +441,7 @@
        "'Hello World!'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +461,7 @@
        "\"Oh, no, you didn't...\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +488,7 @@
        "\"Oh, no, you didn't...\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +508,7 @@
        "'\"Yes\", I did!'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +528,7 @@
        "'\"Yes\", I did'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +548,7 @@
        "'Hello World!'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +568,7 @@
        "'Hello\\tWorld'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +606,7 @@
        "'First line.\\nSecond line.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +689,7 @@
        "'hmm miammiammiam'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +709,7 @@
        "'Python'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +729,7 @@
        "'Python'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +750,7 @@
        "'Put several strings within parentheses to have them joined together, with the use of concatenation'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +807,7 @@
        "[1, 4, 9, 16, 25, 1, 8, 27, 64, 125]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +830,7 @@
        "[1, 4, 9, 16, 25, 1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -860,10 +851,10 @@
      "evalue": "can't multiply sequence by non-int of type 'list'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-27f4ae718739>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msquares\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mcubes\u001b[0m     \u001b[1;31m# Multiplication of lists can only be done with integers, not lists\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[67], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m squares \u001b[38;5;241m*\u001b[39m cubes\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
      ]
     }
    ],
@@ -888,21 +879,22 @@
     "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"]\n",
     "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"}\n",
     "unique_list = list(set(mylist))\n",
+    "sorted(unique_list)\n",
+    "\n",
+    "\"10\" in myset\n",
+    "\"10\" in unique_list\n",
     "\n",
     "set1 = {1, 2, 3}\n",
     "set2 = {3, 4, 5}\n",
     "union_set = set1.union(set2)\n",
-    "print(union_set)  # Output: {1, 2, 3, 4, 5}\n",
-    "\n",
-    "\n",
-    "\n",
+    "print(union_set)\n",
     "```\n",
     "<div style=\"height: 50px\"></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,29 +924,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['4', '10', '2', '13', '11', '1']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mylist:  ['1', '1', '2', '2', '4', '4', '10', '11', '13']\n",
+      "myset:  {'11', '1', '2', '13', '4', '10'}\n",
+      "unique_list:  ['4', '10', '2', '13', '11', '1']\n",
+      "sorted_unique_list:  ['1', '10', '11', '13', '2', '4']\n"
+     ]
     }
    ],
    "source": [
-    "unique_list"
+    "mylist = [\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"] # Lists may contain duplicate elements\n",
+    "myset = {\"1\", \"1\", \"2\", \"2\", \"4\", \"4\", \"10\", \"11\", \"13\"} # Sets automatically remove duplicate elements. \n",
+    "unique_list = list(set(mylist)) # a convenient way to remove duplicate elements from a list \n",
+    "sorted_unique_list = sorted(unique_list)\n",
+    "print(\"mylist: \", mylist)\n",
+    "print(\"myset: \", myset)\n",
+    "print(\"unique_list: \", unique_list) \n",
+    "print(\"sorted_unique_list: \", sorted_unique_list) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A list may contain duplicate elements, but a set contains only unique elements. Sets automatically remove duplicate elements when they are assigned with values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"10\" in myset)\n",
+    "print(\"10\" in unique_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can check membership of an element using the `in` operation for both Lists and Sets. However, Sets is usually faster for membership checking, especially when the data contains many elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {1, 2, 3}\n",
+    "set2 = {3, 4, 5}\n",
+    "union_set = set1.union(set2)\n",
+    "print(union_set) # The union method returns a new set with the union of two sets."
    ]
   },
   {
